k8s/database-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle-db
  labels:
    app: oracle-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oracle-db
  template:
    metadata:
      labels:
        app: oracle-db
    spec:
      containers:
        - name: oracle-db
          image: gvenzl/oracle-xe:21-slim
          ports:
            - containerPort: 1521
---
apiVersion: v1
kind: Service
metadata:
  name: oracle-db
spec:
  ports:
    - port: 1521
      targetPort: 1521
  selector:
    app: oracle-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
